--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,23 +1,95 @@
-fastapi==0.116.1
-uvicorn[standard]==0.24.0
-pydantic==2.11.8
-httpx==0.25.2
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
 aiofiles==23.2.1
-dnspython==2.4.2
-tldextract==5.1.1
-requests==2.31.0
-python-magic==0.4.27
-google-generativeai==0.3.2
-virustotal-api==1.1.11
-whois==0.9.27
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.10.0
+async-timeout==5.0.1
+bcrypt==4.3.0
 beautifulsoup4==4.12.2
+billiard==4.2.1
+cachetools==5.5.2
+celery==5.3.4
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+cryptography==45.0.7
+dnspython==2.4.2
+ecdsa==0.19.1
+exceptiongroup==1.3.0
+fastapi==0.116.1
+filelock==3.19.1
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.181.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-genai==1.36.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+grpcio-status==1.62.3
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.31.0
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+joblib==1.5.2
+kombu==5.5.4
 lxml==4.9.3
 numpy==1.24.3
-scikit-learn==1.3.0
+packaging==25.0
 pandas==2.1.4
+passlib==1.7.4
+pluggy==1.6.0
+prompt_toolkit==3.0.52
+proto-plus==1.26.1
+protobuf==4.25.8
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.11.8
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyparsing==3.2.4
+pytest==8.4.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+python-jose==3.3.0
+python-magic==0.4.27
+python-multipart==0.0.6
+pytz==2025.2
+PyYAML==6.0.2
 redis==5.0.1
-celery==5.3.4
+requests==2.31.0
+requests-file==2.1.0
+rsa==4.9.1
+scikit-learn==1.3.0
+scipy==1.15.3
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8
+starlette==0.47.3
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tldextract==5.1.1
+tomli==2.2.1
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.24.0
+vine==5.1.0
+virustotal-api==1.1.11
+watchfiles==1.1.0
+wcwidth==0.2.13
+websockets==15.0.1
+whois==0.9.27
