--- a/backend/env.example
+++ b/backend/env.example
@@ -8,6 +8,7 @@ SECRET_KEY=your-secret-key-change-in-production
 VIRUSTOTAL_API_KEY=your-virustotal-api-key
 GOOGLE_SAFE_BROWSING_API_KEY=your-google-safe-browsing-api-key
 GEMINI_API_KEY=your-gemini-api-key
+SOPHOS_AUTH_TOKEN=your-sophos-api-key
 
 # Database Configuration (optional)
 DATABASE_URL=sqlite:///./secureguard.db
