added link analysis

--- a/backend/env.example
+++ b/backend/env.example
@@ -7,6 +7,7 @@ SECRET_KEY=your-secret-key-change-in-production
 # External API Keys
 VIRUSTOTAL_API_KEY=your-virustotal-api-key
 GOOGLE_SAFE_BROWSING_API_KEY=your-google-safe-browsing-api-key
+GOOGLE_WEB_RISK_API_KEY=your-google-web-risk-api-key
 GEMINI_API_KEY=your-gemini-api-key
 SOPHOS_AUTH_TOKEN=your-sophos-api-key
 
